# TimesheetTracker

./: .gitignore  CONTRIBUTING.md  README.md  TimesheetTracker.spec  TimesheetTracker_Setup.iss  _test_seed.py  _test_time_blocks.py  core_engine.py  fix.py  gui_app.py  main.py  pyproject.toml  single_instance.py  version.txt
tests/: conftest.py  test_leaves_holidays.py  test_projects.py  test_time_blocks.py  test_timesheet.py
