[project]
name = "ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyQt6>=6.8.0",
    "google-genai>=2.8.0",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.20.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

